corrections made to adhere to the Google Java Style Guide